<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.text.InputType" />

        <variable
            name="note"
            type="com.engin.note_app.domain.model.Note" />

        <variable
            name="editMode"
            type="boolean" />

        <variable
            name="isLoading"
            type="boolean" />


    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            tools:context=".presentation.note_add_edit.NoteAddEditFragment"
            tools:ignore="ScrollViewSize">

            <ImageView
                android:id="@+id/note_image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/note_image"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_baseline_image_not_supported"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />


            <EditText
                android:id="@+id/note_image_et"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@null"
                android:ems="10"
                android:fontFamily="@font/nunito"
                android:hint="@string/image_hint"
                android:importantForAutofill="no"
                android:inputType="text"
                android:maxLines="1"
                android:textSize="@dimen/description_text_size"
                android:text="@{note.imageUrl}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/note_description_et"
                app:visibleGone="@{isLoading}" />

            <EditText
                android:id="@+id/note_description_et"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:background="@null"
                android:ems="10"
                android:gravity="top"
                android:hint="@string/note_hint"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:lineSpacingMultiplier="1.3"
                android:textSize="@dimen/description_text_size"
                android:scrollbars="vertical"
                android:text="@{note.description}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/note_title_et"
                app:visibleGone="@{isLoading}" />

            <EditText
                android:id="@+id/note_title_et"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:background="@null"
                android:ems="10"
                android:hint="@string/title_hint"
                android:importantForAutofill="no"
                android:inputType="textCapWords"
                android:text="@{note.title}"
                android:textSize="@dimen/title_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/note_image"
                app:visibleGone="@{isLoading}" />

            <Button
                android:id="@+id/confirm_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:text="@string/edit"
                android:textSize="@dimen/button_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/note_image_et"
                app:visibleGone="@{isLoading}" />


            <!--Loading Part-->

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:cardCornerRadius="8dp"
                app:visibleGone="@{!isLoading}">

                <ProgressBar
                    style="@android:style/Widget.Material.ProgressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_gravity="center"
                    android:indeterminateTint="@color/teal_200" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito"
                    android:text="@string/loading_label"
                    android:textColor="@color/teal_700"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>